--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
-.vscode
-main.c
-RC4.c
+# Prerequisites
+*.d
+
+# Object files
+*.o
+*.ko
+*.obj
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
